--- a/index.html
+++ b/index.html
@@ -1,49 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Aegisub魔法指南</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Description">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div id="app"></div>
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
-  <script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script>
-  <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
-  <script>
-    window.$docsify = {
-      name: 'Aegisub魔法指南',
-      repo: 'https://github.com/sakurayang/aegisub_magic/',
-	  coverpage: true,
-	  onlyCover: true,
-	  themeColor: '#a2080d',
-	  loadSidebar: true,
-	  subMaxLevel: 2,
-	  plugins: [
-		EditOnGithubPlugin.create("https://github.com/sakurayang/aegisub_magic/blob/master/docs/",null, "在github上编辑")
-	  ],
-	  count:{
-		countable:true,
-		fontsize:'0.9em',
-		color:'rgb(90,90,90)',
-		language:'chinese'
-	  },
-	  tabs: {
-		persist    : true,      // default
-		sync       : true,      // default
-		theme      : 'classic', // default
-		tabComments: true,      // default
-		tabHeadings: true       // default
-	  }
-    }
-  </script>
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
-  
-</body>
+
+	<head>
+		<meta charset="UTF-8">
+		<title>Aegisub魔法指南</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<meta name="description" content="Description">
+		<meta name="viewport"
+			content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+		<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css">
+		<link rel="stylesheet" href="style.css">
+		<script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script>
+
+
+	</head>
+
+	<body>
+		<div id="app"></div>
+		<script>
+			window.$docsify = {
+				name: 'Aegisub魔法指南',
+				repo: 'https://github.com/sakurayang/aegisub_magic/',
+				coverpage: true,
+				onlyCover: true,
+				themeColor: '#a2080d',
+				loadSidebar: true,
+				subMaxLevel: 2,
+				plugins: [
+					EditOnGithubPlugin.create("https://github.com/sakurayang/aegisub_magic/blob/master/docs/", null,
+						"在github上编辑")
+				],
+				count: {
+					countable: true,
+					fontsize: '0.9em',
+					color: 'rgb(90,90,90)',
+					language: 'chinese'
+				},
+				tabs: {
+					persist: true, // default
+					sync: false, // default
+					theme: 'material', // default
+					tabComments: false, // default
+					tabHeadings: true // default
+				},
+				copyCode: {
+					buttonText : '复制到剪贴板',
+					errorText  : '错误',
+					successText: '已复制'
+				}
+			}
+		</script>
+		<script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+		<script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script>
+		<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
+		<script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
+		<script src="//unpkg.com/docsify-count/dist/countable.js"></script>
+		<script src="//cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
+	</body>
+
 </html>
