--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta name="viewport"
 			content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css">
+		<link rel="stylesheet" href="//unpkg.com/docsify-gifcontrol/dist/docsify-gifcontrol.css">
 		<link rel="stylesheet" href="style.css">
 		<script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script>
 
@@ -56,6 +57,7 @@
 		<script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
 		<script src="//unpkg.com/docsify-count/dist/countable.js"></script>
 		<script src="//cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
+		<script src="//unpkg.com/docsify-gifcontrol/dist/docsify-gifcontrol.js"></script>
 	</body>
 
 </html>
